# omega-generalization

./: .gitignore  README.md  pyproject.toml
omega_generalization/models/: rnn.py
omega_generalization/tasks/omega_regular/: DBA.py  lift.py
omega_generalization/training/: constants.py  example.py  range_evaluation.py  training.py
